--- a/DockPanel/Practice.csproj
+++ b/DockPanel/Practice.csproj
@@ -132,6 +132,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Include="RestrictCharactersInDataGridView\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RestrictCharactersInDataGridView\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="SearchAndHighlightText\SearchAndHighlightText.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -177,6 +183,9 @@
     <EmbeddedResource Include="Properties\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RestrictCharactersInDataGridView\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SearchAndHighlightText\SearchAndHighlightText.resx">
       <DependentUpon>SearchAndHighlightText.cs</DependentUpon>
@@ -241,6 +250,8 @@
     <None Include="SlotMachine\Resource_SlotMachine\JailRabbit.png" />
     <None Include="SlotMachine\Resource_SlotMachine\one.jpg" />
     <None Include="SlotMachine\Resource_SlotMachine\Snoopy.jpg" />
+    <Content Include="RestrictCharactersInDataGridView\Screenshot.jpg" />
+    <Content Include="SearchAndHighlightText\Screenshot.jpg" />
     <Content Include="SlotMachine\Screenshot.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
