--- a/DockPanel/Practice.csproj
+++ b/DockPanel/Practice.csproj
@@ -125,6 +125,10 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Practice1\Form1.cs" />
+    <Compile Include="Practice1\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resource.Designer.cs">
@@ -179,6 +183,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Practice1\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -250,6 +257,8 @@
     <None Include="SlotMachine\Resource_SlotMachine\JailRabbit.png" />
     <None Include="SlotMachine\Resource_SlotMachine\one.jpg" />
     <None Include="SlotMachine\Resource_SlotMachine\Snoopy.jpg" />
+    <Content Include="MentalArithmetic\Screenshot.jpg" />
+    <Content Include="Practice1\Screenshot.jpg" />
     <Content Include="RestrictCharactersInDataGridView\Screenshot.jpg" />
     <Content Include="SearchAndHighlightText\Screenshot.jpg" />
     <Content Include="SlotMachine\Screenshot.jpg" />
