--- a/DockPanel/Practice.csproj
+++ b/DockPanel/Practice.csproj
@@ -125,8 +125,16 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Practice1\Form1.cs" />
+    <Compile Include="Practice1\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Practice1\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Practice2\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Practice2\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -187,6 +195,9 @@
     <EmbeddedResource Include="Practice1\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Practice2\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
@@ -207,6 +218,13 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Practice2\TestData\0927.xls" />
+    <None Include="Practice2\TestData\0928.xls" />
+    <None Include="Practice2\TestData\0929.xls" />
+    <None Include="Practice2\TestData\0930 %282%29.xls" />
+    <None Include="Practice2\TestData\0930.xls" />
+    <None Include="Practice2\TestData\1001.xls" />
+    <None Include="Practice2\TestData\便當費用test.xlsx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -239,7 +257,35 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>5</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>7</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="FingerGuessingGame\Screenshot.jpg" />
     <Content Include="ListViewControl\Screenshot.jpg" />
@@ -259,6 +305,7 @@
     <None Include="SlotMachine\Resource_SlotMachine\Snoopy.jpg" />
     <Content Include="MentalArithmetic\Screenshot.jpg" />
     <Content Include="Practice1\Screenshot.jpg" />
+    <Content Include="Practice2\Screenshot.jpg" />
     <Content Include="RestrictCharactersInDataGridView\Screenshot.jpg" />
     <Content Include="SearchAndHighlightText\Screenshot.jpg" />
     <Content Include="SlotMachine\Screenshot.jpg" />
