--- a/DockPanel/Practice.csproj
+++ b/DockPanel/Practice.csproj
@@ -185,6 +185,12 @@
     <Compile Include="SlotMachine\SlotMachine.designer.cs">
       <DependentUpon>SlotMachine.cs</DependentUpon>
     </Compile>
+    <Compile Include="TimersTimer\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TimersTimer\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FingerGuessingGame\FingerGuessingGame.resx">
       <DependentUpon>FingerGuessingGame.cs</DependentUpon>
     </EmbeddedResource>
@@ -242,6 +248,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SlotMachine\SlotMachine.resx">
       <DependentUpon>SlotMachine.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TimersTimer\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
@@ -327,6 +336,7 @@
     <Content Include="MatchingGame\Resource_MatchingGame\蘋果.png" />
     <Content Include="MatchingGame\Resource_MatchingGame\西瓜.png" />
     <Content Include="MatchingGame\Screenshot.jpg" />
+    <Content Include="TimersTimer\Screenshot.jpg" />
     <None Include="SlotMachine\Resource_SlotMachine\JailRabbit.png" />
     <None Include="SlotMachine\Resource_SlotMachine\one.jpg" />
     <None Include="SlotMachine\Resource_SlotMachine\Snoopy.jpg" />
