--- a/DockPanel/app.config
+++ b/DockPanel/app.config
@@ -1,3 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+  <appSettings>
+    <add key="Practice.DefaultPath.Setting" value="D:\Users\yhlin\Projects\Exercises\C_sharp-Projects\DockPanel\"/>
+  </appSettings>
+  <connectionStrings>
+  </connectionStrings>
+</configuration>
