--- a/DockPanel/Practice.csproj
+++ b/DockPanel/Practice.csproj
@@ -79,6 +79,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAnalysis\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DataAnalysis\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="FingerGuessingGame\FingerGuessingGame.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,6 +222,9 @@
     <Compile Include="TimersTimer\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DataAnalysis\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FingerGuessingGame\FingerGuessingGame.resx">
       <DependentUpon>FingerGuessingGame.cs</DependentUpon>
     </EmbeddedResource>
@@ -360,6 +369,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DataAnalysis\Screenshot.jpg" />
     <Content Include="FingerGuessingGame\Screenshot.jpg" />
     <Content Include="FormTransfer\Screenshot.jpg" />
     <Content Include="ListViewControl\Screenshot.jpg" />
@@ -381,6 +391,7 @@
     <Content Include="OrderNumberGenerator2\OrderNumber2.accdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="OrderNumberGenerator2\Screenshot.jpg" />
     <Content Include="TimersTimer\Screenshot.jpg" />
     <None Include="SlotMachine\Resource_SlotMachine\JailRabbit.png" />
     <None Include="SlotMachine\Resource_SlotMachine\one.jpg" />
