--- a/DockPanel/Practice.csproj
+++ b/DockPanel/Practice.csproj
@@ -168,6 +168,12 @@
     <Compile Include="Practice2\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Practice3\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Practice3\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Print_form\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -266,6 +272,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Practice2\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Practice3\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Print_form\Form1.resx">
@@ -392,6 +401,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="OrderNumberGenerator2\Screenshot.jpg" />
+    <Content Include="Practice3\Screenshot.jpg" />
     <Content Include="TimersTimer\Screenshot.jpg" />
     <None Include="SlotMachine\Resource_SlotMachine\JailRabbit.png" />
     <None Include="SlotMachine\Resource_SlotMachine\one.jpg" />
