--- a/DockPanel/app.config
+++ b/DockPanel/app.config
@@ -1,9 +1,14 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+  </configSections>
   <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
   <appSettings>
     <add key="Practice.DefaultPath.Setting" value="D:\Users\yhlin\Projects\Exercises\C_sharp-Projects\DockPanel\"/>
   </appSettings>
   <connectionStrings>
+    <add name="Practice.Properties.Settings.TestConnectionString"
+      connectionString="Data Source=|DataDirectory|\Test\Test.sdf"
+      providerName="Microsoft.SqlServerCe.Client.3.5" />
   </connectionStrings>
 </configuration>
